Sun Apr 16 23:24:25 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - renamed fatal(), upslog(), and upsdebug() as fatal_with_errno(), 
   upslog_with_errno(), and upsdebug_with_errno(). 

Mon Apr 16 21:03:20 UTC 2006 / Kjell Claesson <kjell.claesson@telia.com>

 - nut_usb.c: Remove iManufacturer and iProduct test in usb_dev_handle.

Sun Apr 16 19:06:14 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec.c: minor changes to the debugging output
 - common.c: gcc doesn't issue warnings anymore
 - driver.list: one more model (Sweex) supported by megatec

Sat Apr 08 21:25:32 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec.c: added some extra debugging.
 - driver.list: added a couple of models supported by megatec

Wed Apr 05 13:17:51 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

- cpsups.c: fix uninitialized variable (Novell bug #159479)

Wed Apr 05 07:58:47 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - newhidups:
   * fix the "double free or corruption" crash upon device
     reconnexion (Debian bug #354305)
   * mge-hid: add new models: Evolution, Pulsar, Pulsar M and Pulsar MX

 - mge-shut:
   * harness the LB flag with ShutdownImminent
   * fix some wrong data format, and remove the zero prefix
   * add Comet EX RT 3:1 (without 3 phase data for the moment)
   * add new models: Evolution, Pulsar, Pulsar M and Pulsar MX
   * bump version to 0.66

 - driver.list: completed with the new above compatibilities

Mon Apr 03 02:04:51 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec.c: proper support for 2x12V UPSes.

Thu Mar 30 00:55:46 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec.c: fixed case of blank fields on UPS identification strings.
   Battery voltages are now set by looking at the present value instead
   of the nominal value.

Wed Mar 29 2:50:31 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec: get manufacturer/model/version information. Ressurected